--- a/users.html
+++ b/users.html
@@ -1,1 +1,245 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Users / Customers | ChatPoint Delivery</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <style>
+    :root {
+      --bg: #0f172a;
+      --card-bg: #1e293b;
+      --text: #e2e8f0;
+      --text-muted: #94a3b8;
+      --border: #334155;
+      --primary: #3b82f6;
+      --success: #10b981;
+      --danger: #ef4444;
+      --whatsapp: #25D366;
+    }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    body {
+      font-family: system-ui, -apple-system, sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      min-height: 100vh;
+      padding-bottom: 80px;
+    }
+    .container { max-width: 1200px; margin: 0 auto; padding: 1rem; }
+    .header {
+      position: sticky; top: 0; background: var(--bg); z-index: 10;
+      padding: 1rem 0; border-bottom: 2px solid var(--border);
+      display: flex; justify-content: space-between; align-items: center;
+    }
+    .header h1 { font-size: 1.6rem; font-weight: 700; }
+    .back-btn {
+      background: #334155;
+      color: white;
+      padding: 0.6rem 1.2rem;
+      border: none;
+      border-radius: 0.5rem;
+      font-weight: 600;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
+    .back-btn:hover { background: #475569; }
+    .search-bar {
+      margin: 1.5rem 0;
+      position: relative;
+    }
+    .search-bar input {
+      width: 100%;
+      padding: 0.9rem 1rem 0.9rem 3rem;
+      border-radius: 0.6rem;
+      border: 1px solid var(--border);
+      background: #1e293b;
+      color: var(--text);
+      font-size: 1rem;
+    }
+    .search-bar i {
+      position: absolute;
+      left: 1rem;
+      top: 50%;
+      transform: translateY(-50%);
+      color: var(--text-muted);
+    }
+    .user-card {
+      background: var(--card-bg);
+      border-radius: 0.75rem;
+      padding: 1.25rem;
+      margin-bottom: 1rem;
+      border: 1px solid var(--border);
+      display: flex;
+      flex-direction: column;
+      gap: 0.8rem;
+    }
+    .user-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .user-name {
+      font-size: 1.15rem;
+      font-weight: 600;
+    }
+    .user-phone {
+      color: var(--text-muted);
+      font-size: 0.95rem;
+    }
+    .user-stats {
+      display: flex;
+      gap: 1.5rem;
+      color: var(--text-muted);
+      font-size: 0.9rem;
+    }
+    .stat-item strong {
+      color: var(--text);
+    }
+    .btn {
+      padding: 0.5rem 1rem;
+      border: none;
+      border-radius: 0.5rem;
+      font-weight: 600;
+      cursor: pointer;
+      display: inline-flex;
+      align-items: center;
+      gap: 0.5rem;
+      font-size: 0.9rem;
+    }
+    .btn-whatsapp {
+      background: var(--whatsapp);
+      color: white;
+    }
+    .btn-whatsapp:hover { opacity: 0.9; }
+    .empty {
+      text-align: center;
+      color: var(--text-muted);
+      padding: 4rem 1rem;
+      font-size: 1.1rem;
+    }
+    .loader {
+      border: 5px solid #1e293b;
+      border-top: 5px solid var(--primary);
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      animation: spin 1s linear infinite;
+      margin: 3rem auto;
+    }
+    @keyframes spin { to { transform: rotate(360deg); } }
+  </style>
+</head>
+<body>
 
+  <div class="container">
+    <div class="header">
+      <h1>Customers</h1>
+      <button class="back-btn" onclick="history.back()">
+        <i class="fas fa-arrow-left"></i> Back
+      </button>
+    </div>
+
+    <div class="search-bar">
+      <i class="fas fa-search"></i>
+      <input type="text" id="searchInput" placeholder="Search by name or phone..." oninput="filterUsers()">
+    </div>
+
+    <div id="loading">
+      <div class="loader"></div>
+      <p style="text-align:center; color:var(--text-muted);">Loading customers...</p>
+    </div>
+
+    <div id="users-container"></div>
+
+    <div id="empty" class="empty" style="display:none;">
+      <p>No customers found.</p>
+    </div>
+  </div>
+
+  <script>
+    const API_BASE = window.location.origin;
+
+    async function fetchUsers() {
+      try {
+        // You can change endpoint name as needed
+        const res = await fetch(`${API_BASE}/api/all-users`);  
+        const data = await res.json();
+
+        document.getElementById('loading').style.display = 'none';
+
+        if (data.success && Array.isArray(data.users) && data.users.length > 0) {
+          renderUsers(data.users);
+        } else {
+          document.getElementById('empty').style.display = 'block';
+        }
+      } catch (err) {
+        console.error(err);
+        document.getElementById('loading').innerHTML = '<p style="color:#ef4444;">Failed to load users. Try again later.</p>';
+      }
+    }
+
+    function renderUsers(users) {
+      const container = document.getElementById('users-container');
+      container.innerHTML = users.map(user => {
+        const lastOrderDate = user.lastOrderDate 
+          ? new Date(user.lastOrderDate).toLocaleDateString('en-IN') 
+          : '—';
+
+        return `
+          <div class="user-card" data-name="${(user.name || '').toLowerCase()}" data-phone="${(user.phone || '').toLowerCase()}">
+            <div class="user-header">
+              <div>
+                <div class="user-name">${user.name || 'Unknown'}</div>
+                <div class="user-phone">${user.phone || '—'}</div>
+              </div>
+              <button class="btn btn-whatsapp" onclick="openWhatsApp('${user.phone || ''}')">
+                <i class="fab fa-whatsapp"></i> Chat
+              </button>
+            </div>
+            <div class="user-stats">
+              <div class="stat-item">Orders: <strong>${user.totalOrders || 0}</strong></div>
+              <div class="stat-item">Last order: <strong>${lastOrderDate}</strong></div>
+              ${user.totalSpent ? `<div class="stat-item">Spent: <strong>₹${user.totalSpent.toFixed(0)}</strong></div>` : ''}
+            </div>
+          </div>
+        `;
+      }).join('');
+    }
+
+    function filterUsers() {
+      const input = document.getElementById('searchInput').value.toLowerCase().trim();
+      const cards = document.querySelectorAll('.user-card');
+
+      cards.forEach(card => {
+        const name = card.dataset.name;
+        const phone = card.dataset.phone;
+        if (name.includes(input) || phone.includes(input)) {
+          card.style.display = '';
+        } else {
+          card.style.display = 'none';
+        }
+      });
+
+      // Show empty message if no visible cards
+      const visible = Array.from(cards).some(c => c.style.display !== 'none');
+      document.getElementById('empty').style.display = visible ? 'none' : 'block';
+    }
+
+    function openWhatsApp(phone) {
+      if (!phone) {
+        alert("No phone number available");
+        return;
+      }
+      let cleaned = phone.replace(/\D/g, '');
+      if (cleaned.startsWith('0')) cleaned = '91' + cleaned.slice(1);
+      else if (!cleaned.startsWith('91')) cleaned = '91' + cleaned;
+      window.open(`https://wa.me/${cleaned}`, '_blank');
+    }
+
+    // Load data when page opens
+    fetchUsers();
+  </script>
+</body>
+</html>
